--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,13 @@
   scroll-behavior: smooth;
   font-family: "Comfortaa", serif;
 }
+
 body {
   font-family: "Comfortaa", serif;
 }
+
 /* >>>>>>>>Loading<<<<<<<<< */
+
 .loading {
   height: 100vh;
   width: 100%;
@@ -23,6 +26,7 @@ body {
   justify-content: center;
   background-color: #272b30d5;
 }
+
 .loader {
   background: #de3500;
   width: 48px;
@@ -31,6 +35,7 @@ body {
   text-align: center;
   animation: 3s rotate linear infinite;
 }
+
 .loader:before {
   content: "";
   position: absolute;
@@ -38,9 +43,10 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  background: #ffff;
+  background: #ffffffac;
   animation: 1.5s rotate reverse linear infinite;
 }
+
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
@@ -51,20 +57,32 @@ body {
 }
 
 /* >>>>>>>>Loading<<<<<<<<< */
+
 .dflex {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+.formInputs {
+  margin: 30px 0px;
+  padding: 10px;
+  border-radius: 6px;
+  /* background-color: rgba(44, 81, 137, 0.241); */
+  box-shadow: 0px 0px 7px 0px rgba(123, 135, 153, 0.414);
+}
+
 .title {
+  width: 100%;
   background-color: white;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
   z-index: 99;
 }
+
 .title h1 {
   letter-spacing: 1px;
   font-family: "Comfortaa", serif;
@@ -72,58 +90,71 @@ body {
   color: white;
   font-weight: 500;
 }
+
 .inputDiv {
   position: relative;
 }
+
 .inputDiv p {
   letter-spacing: 1px;
 }
+
 .inputDiv input,
 .inputDiv textarea {
   padding: 10px;
 }
+
 .inputDiv textarea {
-  height: 50px !important;
+  height: 120px !important;
   resize: none;
 }
+
 .form-label {
   position: absolute !important;
   z-index: 99;
   transition: all 0.3s ease;
   font-size: 16px;
 }
+
 .inputDiv input:focus + label,
 .inputDiv textarea:focus + label {
   font-size: 15px !important;
   color: #888 !important;
   top: 0px !important;
 }
+
 .inputDiv input:focus,
 .inputDiv textarea:focus {
   box-shadow: 2px 2px 13px 0px #7777774b !important;
   border: 2px solid #7777774b;
 }
+
 form #addBtn,
 form #updateBtn {
   letter-spacing: 2px;
 }
+
 form .formBtn button {
   width: 200px;
 }
+
 /* >>>>>>>>>>>>>>>>>>>>>>>
 >>>>>Display Card
 >>>>>>>>>>>>>>>>>>>>>>>>>>> */
+
 .displayProduct .theCard {
   background-color: white;
   box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.6);
   padding: 15px;
   border-radius: 5px;
 }
+
 .displayProduct .theCard h4 {
   text-transform: capitalize;
   margin-bottom: 20px;
   color: #422447;
 }
+
 .displayProduct .theCard p {
   font-size: 18px;
   text-transform: capitalize;
@@ -132,6 +163,7 @@ form .formBtn button {
   border-radius: 5px;
   margin-bottom: 20px !important;
 }
+
 .displayProduct .theCard .price,
 .displayProduct .theCard .category {
   font-size: 20px;
@@ -145,19 +177,23 @@ form .formBtn button {
   border-radius: 5px;
   color: rgba(50, 49, 49, 0.75) !important;
 }
+
 .displayProduct .theCard img {
   height: 200px;
   border: 2px solid #39373725;
   border-radius: 6px;
   padding: 10px;
 }
+
 .theCard .proName {
   text-transform: capitalize;
   margin-top: 10px;
 }
+
 /* 
 >>>>>>>>>>>>>(Media Query)
 */
+
 @media (max-width: 776px) {
   form .formBtn button {
     width: 75%;
